remove last element is working, the spacing is fixed, and now the list input field spits out each element in the array as a sseparate p tag instead of one.

--- a/style.css
+++ b/style.css
@@ -23,3 +23,6 @@
 /*.submittedTitle {
   float: right;
 }*/
+.submitted p {
+  display: inline-block;
+}
